--- a/src/pages/setup/setup.module.css
+++ b/src/pages/setup/setup.module.css
@@ -2,7 +2,7 @@
 	margin-top: 16px;
 }
 
-.size {
+.radiogroup {
 	display: flex;
 	justify-content: center;
 }
@@ -54,16 +54,4 @@
 
 .submit {
 	margin-top: 16px;
-	padding: 8px 16px;
-	font-size: 12px;
-	text-transform: uppercase;
-	border: none;
-	background-color: dodgerblue;
-	color: #fff;
-	border-radius: 4px;
-}
-
-.submit:focus {
-	outline: 2px solid dodgerblue;
-	outline-offset: 2px;
 }
