--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -3,12 +3,12 @@
 	font-size: 12px;
 	text-transform: uppercase;
 	border: none;
-	background-color: dodgerblue;
+	background-color: var(--secondary-color);
 	color: #fff;
 	border-radius: 4px;
 }
 
 .button:focus {
-	outline: 2px solid dodgerblue;
+	outline: 2px solid var(--secondary-color);
 	outline-offset: 2px;
 }
