--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
 	--text-color-hex: #333333;
 	--text-color-rgb: 51, 51, 51;
+	--primary-color: #FFE873;
+	--secondary-color: #4B8BBE;
 }
 
 body {
