--- a/src/components/field/field.module.css
+++ b/src/components/field/field.module.css
@@ -1,41 +1,57 @@
 .field {
-	--field-color: #8DBF39;
+	--field-color: #222;
 
 	display: inline-grid;
 	grid-template-columns: repeat(var(--size), minmax(24px, 1fr));
 	grid-template-rows: repeat(var(--size), minmax(24px, 1fr));
 	gap: 1px;
+	min-width: 256px;
+	min-height: 256px;
+	border-radius: 4px;
+	overflow: hidden;
+	background-color: #444;
 }
 
 .cell {
 	background-color: var(--field-color);
 }
 
-.snake:before,
-.snake:after {
-	content: '';
-	position: absolute;
-	width: 4px;
-	height: 4px;
-	border-radius: 50%;
-	background-color: var(--secondary-color);
-}
-
-.snake:before {
-	top: 25%;
-	left: 25%;
-}
-
-.snake:after {
-	bottom: 25%;
-	right: 25%;
-}
-
 .snake {
-	position: relative;
 	background-color: var(--primary-color);
+}
+
+.snake_head {
+	background-image: url('../../images/svg/js-logo.svg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100%;
 }
 
 .target {
-	background-color: var(--primary-color);
+	position: relative;
+	overflow: hidden;
+}
+
+.target::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+
+	background-image: url('../../images/svg/react-logo.svg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+	from {
+		transform: rotate(0);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
