--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -12,9 +12,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border: 2px solid rgba(var(--text-color-rgb), 0.5);
+	border: 2px solid var(--secondary-color);
 	border-radius: 8px;
-	color: rgba(var(--text-color-rgb), 0.5);
+	color: var(--secondary-color);
 }
 
 .key + .key {
