--- a/src/pages/result/result.module.css
+++ b/src/pages/result/result.module.css
@@ -1,5 +1,13 @@
+.container {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
 .result {
-	margin: 0;
-	text-align: center;
-	line-height: 100vh;
+	margin: 0 0 32px;
+	text-transform: uppercase;
+	letter-spacing: 0.4px;
 }
