--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,27 +1,43 @@
 .navigation {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-	margin-top: 24px;
+  margin-top: 24px;
 }
 
 .key {
-	width: 48px;
-	height: 48px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border: 2px solid var(--secondary-color);
-	border-radius: 8px;
-	color: var(--secondary-color);
+  width: 48px;
+  height: 48px;
+  border: 2px solid var(--secondary-color);
+  border-radius: 8px;
+  color: var(--secondary-color);
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .key + .key {
-	margin-left: 16px;
+  margin-left: 16px;
 }
 
 .key svg {
-	max-width: 50%;
-	max-height: 50%;
+  max-width: 50%;
+  max-height: 50%;
+}
+
+.up {
+  background-image: url("../../images/arrow-up-solid.svg");
+}
+
+.down {
+  background-image: url("../../images/arrow-down-solid.svg");
+}
+
+.left {
+  background-image: url("../../images/arrow-left-solid.svg");
+}
+
+.right {
+  background-image: url("../../images/arrow-right-solid.svg");
 }
