--- a/src/pages/game/game.module.css
+++ b/src/pages/game/game.module.css
@@ -1,57 +1,57 @@
 .field {
-  --field-color: #222;
+	--field-color: #222;
 
-  display: inline-grid;
-  grid-template-columns: repeat(var(--size), minmax(24px, 1fr));
-  grid-template-rows: repeat(var(--size), minmax(24px, 1fr));
-  gap: 1px;
-  min-width: 256px;
-  min-height: 256px;
-  border-radius: 4px;
-  overflow: hidden;
-  background-color: #444;
+	display: inline-grid;
+	grid-template-columns: repeat(var(--size), minmax(24px, 1fr));
+	grid-template-rows: repeat(var(--size), minmax(24px, 1fr));
+	gap: 1px;
+	min-width: 256px;
+	min-height: 256px;
+	border-radius: 4px;
+	overflow: hidden;
+	background-color: #444;
 }
 
 .cell {
-  background-color: var(--field-color);
+	background-color: var(--field-color);
 }
 
 .snake {
-  background-color: var(--primary-color);
+	background-color: var(--primary-color);
 }
 
-.snake_head {
-  background-image: url("../../images/js-logo.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
+.snake-head {
+	background-image: url("../../images/js-logo.svg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100%;
 }
 
 .target {
-  position: relative;
-  overflow: hidden;
+	position: relative;
+	overflow: hidden;
 }
 
 .target::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-
-  background-image: url("../../images/react-logo.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  animation: rotation 2s infinite linear;
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url("../../images/react-logo.svg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	animation: rotation 2s infinite linear;
 }
 
 @keyframes rotation {
-  from {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0);
+	}
+
+	to {
+		transform: rotate(360deg);
+	}
 }
