--- a/src/pages/setup/setup.module.css
+++ b/src/pages/setup/setup.module.css
@@ -2,6 +2,17 @@
 	margin-top: 32px;
 }
 
+.label {
+	padding: 4px 8px;
+	border-radius: 4px;
+	text-transform: uppercase;
+	color: rgb(var(--text-color-rgb) 0.5);
+}
+
+.label ~ .label {
+	margin-left: 8px;
+}
+
 .radiogroup {
 	display: flex;
 	justify-content: center;
@@ -26,17 +37,6 @@
 	color: initial;
 }
 
-.label {
-	padding: 4px 8px;
-	border-radius: 4px;
-	text-transform: uppercase;
-	color: rgba(var(--text-color-rgb), 0.5);
-}
-
-.label ~ .label {
-	margin-left: 8px;
-}
-
 .table {
 	display: inline-grid;
 	grid-template-columns: repeat(var(--size), 1fr);
@@ -50,7 +50,7 @@
 	border-radius: 4px;
 }
 
-.cell_selected {
+.cell-selected {
 	background-color: var(--primary-color);
 }
 
